# taia-project-code

./: .gitignore  .pylintrc  Makefile  README.md  entrypoint.py  pyproject.toml
.github/workflows/: linters.yml
predictions/svamp/: default.json  lower-bound-4.json  specific-2.json  specific-3.json  specific-4.json  specific-6.json
project/: __init__.py  __main__.py  constants.py  engine.py  errors.py  model.py  provokers.py  types.py  utils.py
project/datasets/: __init__.py  core.py  types.py
project/predictions/: __init__.py  core.py  types.py
project/stats/: __init__.py  core.py  types.py  utils.py
stats/svamp/: default.json  lower-bound-4.json  specific-2.json  specific-3.json  specific-4.json  specific-6.json
