[tool.poetry]
name = "taia-project"
version = "0.1.0"
description = "Code for the TAIA project regarding Prompting and Chain of Thought"
license = "MIT"
authors = ["Daniel Leal <dlleal@uc.cl>"]
maintainers = ["Daniel Leal <dlleal@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pylint = "^2.15.7"
mypy = "^0.991"
